--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.pke</groupId>
-	<artifactId>liber</artifactId>
+	<groupId>org.jar</groupId>
+	<artifactId>invent</artifactId>
 	<version>0.1</version>
 	<packaging>war</packaging>
 
@@ -22,7 +22,8 @@
     </properties>
 
 	<dependencies>
-	
+
+		<!-- external dependancies -->
 		<dependency>
 		   <groupId>mysql</groupId>
 		   <artifactId>mysql-connector-java</artifactId>
@@ -33,6 +34,12 @@
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+		<!-- web core -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	
 	
 		<!-- Thymeleaf template framework -->
@@ -49,11 +56,7 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<!-- Spring security config -->
+		<!-- Spring security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -82,11 +85,6 @@
 	</build>
 
 	<repositories>
-<!-- 		<repository> -->
-<!-- 			<id>spring-milestones</id> -->
-<!-- 			<name>Spring Milestones</name> -->
-<!-- 			<url>http://repo.spring.io/libs-milestone</url> -->
-<!-- 		</repository> -->
 		<repository>
             <id>spring-releases</id>
             <name>Spring Releases</name>
@@ -100,11 +98,6 @@
 	</repositories>
 
 	<pluginRepositories>
-<!-- 		<pluginRepository> -->
-<!-- 			<id>spring-milestones</id> -->
-<!-- 			<name>Spring Milestones</name> -->
-<!-- 			<url>http://repo.spring.io/libs-milestone</url> -->
-<!-- 		</pluginRepository> -->
 		<pluginRepository>
             <id>spring-releases</id>
             <name>Spring Releases</name>
