--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Liber Albus</display-name>
-  <description>Welcome to the most awesome breeding platform (so far)</description>
+  <display-name>Invent</display-name>
+  <description>Welcome to the most awesome inventory platform (so far)</description>
 
 </web-app>
