--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,8 +1,8 @@
 #NOTE: change to update to reflect changes to model, create-drop to drop model at end
 hibernate.hbm2ddl.auto=validate
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/liberal
+hibernate.connection.url=jdbc:mysql://localhost:3306/invent
 hibernate.connection.username=root
 hibernate.connection.password=root
